# kirin-autonomous-chess

./: .gitignore  README.md  left_to_do.md  pi_wlan0.txt
.github/workflows/: ci.yml  test-report.yml
board-interpreter/: CMakeLists.txt  board_interpreter.cpp  board_interpreter.h  pseudocode.txt
board-interpreter/src/: board_interpreter.cpp  board_interpreter.h  board_interpreter_test.cpp
docs/: engine-docs.md
docs/board-interpreter-docs/: board_interpreter_docs.tex  software_docs.tex
docs/engine-docs/: engine_docs.tex  nnue_training.md
docs/hardware-integration-docs/: hardware-integration-docs.tex  hardware-integration-docs.toc
docs/software-docs/: software_docs.tex  software_docs.toc
docs/timeline/: timeline.tex
engine/: CMakeLists.txt  engine.cpp
engine/src/: bitboard.h  engine.cpp  engine.h  evaluation.cpp  evaluation.h  main.cpp  movegen.cpp  movegen.h  position.cpp  position.h  search.cpp  search.h  types.h  uci.cpp  utils.cpp  utils.h  zobrist.cpp
kirin/: CMakeLists.txt
kirin/src/: main.cpp
kirin/src/engine/: attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  engine.h  evaluation.cpp  evaluation.h  movegen.cpp  movegen.h  nnue.cpp  nnue.h  position.cpp  position.h  search.cpp  search.h  types.cpp  types.h  types.txt  uci.cpp  uci.h  utils.cpp  utils.h  zobrist.cpp  zobrist.h
kirin/src/hardware/: board_interpreter.cpp  board_interpreter.h  board_interpreter_test.cpp  board_scanner.cpp  board_scanner.h  button_controller.cpp  button_controller.h  display_controller.cpp  display_controller.h  game_controller.cpp  game_controller.h  gantry_controller.cpp  gantry_controller.h  piece_tracker.h
kirin/tests/: TEST_RESULTS.md  board_interpreter_test.cpp  board_scanner_test.cpp  captured_piece_test.cpp  engine_test.cpp  game_controller_test.cpp  generate_test_report.py  ui_controller_test.cpp
kirin/tools/: convert_nnue.py  nnue_format.py  pgn_to_training_csv.py  train_nnue.py  write_bootstrap_nnue.py
video/: README.md  manim.cfg  requirements.txt
video/scenes/: kirin_board_overview.py
video/scripts/: render_preview.sh
